# miditool

./: 404.html  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  index.html  release-please-config.json  sitemap-0.xml  sitemap-index.xml
.github/workflows/: ci.yml  docs.yml  publish-release.yml  release-please.yml  release.yml
_astro/: Search.astro_astro_type_script_index_0_lang.DVfOJpSY.js  common.Bu8NK_mx.css  ui-core.gf7Cfx6H.js
configuration/: index.html
configuration/config-files/: index.html
configuration/routing/: index.html
configuration/scripting/: index.html
configuration/seeds/: index.html
configuration/time/: index.html
crates/cli/: Cargo.toml
crates/cli/src/: backend.rs  bench.rs  build.rs  config_path.rs  doctor.rs  main.rs  pretty.rs  scaffold.rs
crates/cli/tests/: hide.rs  loopback.rs
crates/config/: Cargo.toml
crates/config/src/: ast.rs  lib.rs  lower.rs
crates/config/tests/: docs_examples.rs  parse.rs
crates/core/: Cargo.toml
crates/core/src/: event.rs  graph.rs  lib.rs  notemap.rs  rng.rs  sieve.rs  tracker.rs  wire.rs
crates/effects/: Cargo.toml
crates/effects/src/: accent_groups.rs  added_value.rs  aggregate_gate.rs  anti_accent.rs  blocked_keys.rs  brownian_walker.rs  channelize.rs  cluster_fist.rs  complement_pad.rs  continuator.rs  continuum.rs  crippled_looper.rs  defer.rs  delay.rs  density_governor.rs  duration_lottery.rs  echo.rs  euclidean_gate.rs  feldman_field.rs  just.rs  klangfarben.rs  lib.rs  loose_keys.rs  mass_crescendo.rs  mechanico.rs  metronome_swarm.rs  mode_lock.rs  mpe.rs  negative_harmony.rs  note_roulette.rs  overtone_pedal.rs  poisson_cloud.rs  quantize.rs  registral_scatter.rs  resonance_halo.rs  restrike.rs  retrograde_buffer.rs  ring_mod.rs  router.rs  row_snap.rs  (+16 more)
crates/effects/tests/: noteoff.proptest-regressions  noteoff.rs
crates/engine/: Cargo.toml
crates/engine/src/: control.rs  graph.rs  handle.rs  lib.rs  pipeline.rs  reload.rs  scheduler.rs
crates/io/: Cargo.toml
crates/io/src/: hide.rs  lib.rs
crates/remote/: Cargo.toml
crates/remote/examples/: dev.rs
crates/remote/src/: lib.rs
crates/remote/tests/: server.rs
crates/remote/ui/: app.js  index.html  style.css
crates/script/: Cargo.toml
crates/script/src/: lib.rs
docs/: astro.config.mjs  package-lock.json  package.json
e2e/: capture.ts  package-lock.json  package.json  playwright.config.ts
e2e/tests/: remote.spec.ts
effects/: index.html
effects/accent-groups/: index.html
effects/added-value/: index.html
effects/aggregate-gate/: index.html
effects/anti-accent/: index.html
effects/blocked-keys/: index.html
effects/brownian-walker/: index.html
effects/channelize/: index.html
effects/cluster-fist/: index.html
effects/complement-pad/: index.html
effects/continuator/: index.html
effects/continuum/: index.html
effects/crippled-looper/: index.html
effects/delay/: index.html
effects/density-governor/: index.html
effects/duration-lottery/: index.html
effects/echo/: index.html
effects/euclidean-gate/: index.html
effects/feldman-field/: index.html
effects/just/: index.html
effects/klangfarben/: index.html
effects/loose-keys/: index.html
effects/mass-crescendo/: index.html
effects/mechanico/: index.html
effects/metronome-swarm/: index.html
effects/mode-lock/: index.html
effects/negative-harmony/: index.html
effects/note-roulette/: index.html
effects/overtone-pedal/: index.html
effects/poisson-cloud/: index.html
effects/quantize/: index.html
effects/registral-scatter/: index.html
effects/resonance-halo/: index.html
effects/restrike/: index.html
effects/retrograde/: index.html
effects/ring-mod/: index.html
effects/row-snap/: index.html
effects/scordatura/: index.html
effects/shuffle-lock/: index.html
effects/sieve/: index.html
effects/snap/: index.html
effects/spectral-halo/: index.html
effects/stutter/: index.html
effects/talea/: index.html
effects/telescope/: index.html
effects/tintinnabuli/: index.html
effects/tonnetz/: index.html
effects/transpose/: index.html
effects/velocity-curve/: index.html
effects/velocity-dice/: index.html
effects/velocity-invert/: index.html
effects/velocity-router/: index.html
effects/wedge-mirror/: index.html
examples/: clouds.kdl  echoes.kdl  harmony.kdl  machines.kdl  microtonal.kdl  performance.kdl  rhythm.kdl  scrambled.kdl  scripted.kdl  serial.kdl  split-fork.kdl  wedge.lua
getting-started/: index.html
guides/: index.html
guides/daws/: index.html
guides/garageband/: index.html
guides/linux/: index.html
guides/live-editing/: index.html
guides/microtonality/: index.html
guides/performing/: index.html
guides/remote/: index.html
guides/troubleshooting/: index.html
guides/windows/: index.html
how-it-works/: index.html
pagefind/: pagefind-entry.json  pagefind.en_d5246daf50.pf_meta
pagefind/fragment/: en_096365c.pf_fragment  en_1072928.pf_fragment  en_12b735d.pf_fragment  en_1616c4a.pf_fragment  en_166462b.pf_fragment  en_2060595.pf_fragment  en_22e06ab.pf_fragment  en_243b02c.pf_fragment  en_29d83b6.pf_fragment  en_2c5f72c.pf_fragment  en_2c9f142.pf_fragment  en_2f436ff.pf_fragment  en_2f7272c.pf_fragment  en_313e999.pf_fragment  en_3552769.pf_fragment  en_36c4aad.pf_fragment  en_39794ff.pf_fragment  en_4560dca.pf_fragment  en_46f7623.pf_fragment  en_4b81bff.pf_fragment  en_4cab482.pf_fragment  en_4d678b7.pf_fragment  en_51ba65c.pf_fragment  en_5462e7a.pf_fragment  en_55b331e.pf_fragment  en_57817ab.pf_fragment  en_59c7479.pf_fragment  en_5c57ff4.pf_fragment  en_5cb8de7.pf_fragment  en_5e45adb.pf_fragment  en_5f4623b.pf_fragment  en_5fe5575.pf_fragment  en_6673145.pf_fragment  en_69c4514.pf_fragment  en_6c81b99.pf_fragment  en_7cf98fd.pf_fragment  en_8a14657.pf_fragment  en_8f27883.pf_fragment  en_94e93c8.pf_fragment  en_9612e54.pf_fragment  (+31 more)
pagefind/index/: en_29165fb.pf_index  en_2fbf906.pf_index  en_3ef621c.pf_index
reference/: index.html
reference/cli/: index.html
reference/releasing/: index.html
spikes/: hidekb.swift
(+72 files in other folders)
