[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/effects",
    "crates/io",
    "crates/engine",
    "crates/config",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Sean Reid <seanreid.mail@gmail.com>"]

[workspace.dependencies]
miditool-core = { path = "crates/core" }
miditool-effects = { path = "crates/effects" }
miditool-io = { path = "crates/io" }
miditool-engine = { path = "crates/engine" }
miditool-config = { path = "crates/config" }

arrayvec = "0.7"
rand = { version = "0.9", default-features = false }
rand_pcg = "0.9"
rand_distr = { version = "0.5", default-features = false }
midir = "0.11"
knus = "3.4"
miette = { version = "7", features = ["fancy"] }
clap = { version = "4.6", features = ["derive"] }
anyhow = "1"
thiserror = "2"
ctrlc = { version = "3", features = ["termination"] }
proptest = "1"

[profile.release]
lto = "thin"
codegen-units = 1
