[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/effects",
    "crates/io",
    "crates/engine",
    "crates/config",
    "crates/cli",
    "crates/remote",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Sean Reid <seanreid.mail@gmail.com>"]

[workspace.dependencies]
miditool-core = { path = "crates/core" }
miditool-effects = { path = "crates/effects" }
miditool-io = { path = "crates/io" }
miditool-engine = { path = "crates/engine" }
miditool-config = { path = "crates/config" }
miditool-remote = { path = "crates/remote" }

arrayvec = "0.7"
audio_thread_priority = "0.35"
notify = "8"
notify-debouncer-full = "0.7"
rand = { version = "0.9", default-features = false }
rand_pcg = "0.9"
rand_distr = { version = "0.5", default-features = false }
rtrb = "0.3"
midir = "0.11"
knus = "3.4"
miette = { version = "7", features = ["fancy"] }
clap = { version = "4.6", features = ["derive"] }
anyhow = "1"
thiserror = "2"
ctrlc = { version = "3", features = ["termination"] }
proptest = "1"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = "0.29"
futures-util = "0.3"

[profile.release]
lto = "thin"
codegen-units = 1
