[package]
name = "miditool-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "KDL configuration for miditool"

[dependencies]
knus.workspace = true
miette.workspace = true
thiserror.workspace = true

[dev-dependencies]
pulldown-cmark.workspace = true
