[package]
name = "miditool-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Event model, wire codec, and effect graph for miditool"

[dependencies]
arrayvec.workspace = true
rand.workspace = true
rand_pcg.workspace = true

[dev-dependencies]
proptest.workspace = true
