[package]
name = "miditool-effects"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Built-in effect library for miditool"

[dependencies]
miditool-core.workspace = true
rand.workspace = true
rand_distr.workspace = true

[dev-dependencies]
proptest.workspace = true
