[package]
name = "miditool-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Realtime run loop for miditool"

[dependencies]
miditool-core.workspace = true
miditool-io.workspace = true
arrayvec.workspace = true
audio_thread_priority.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
rand.workspace = true
rtrb.workspace = true
thiserror.workspace = true
