[package]
name = "miditool-remote"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Web remote for miditool: scenes, panic, and a live monitor over the LAN"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio-tungstenite.workspace = true
futures-util.workspace = true
